version/0.21/_sources/api/solver/_autosummary/settings/database.rst.txt
:orphan:

.. _database:

database
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.database.database
    :show-inheritance:

.. rubric:: Attributes

====================================   ==============================

Attribute                                                     Summary

====================================   ==============================
:ref:`database_type <database_type>`       Specify the database type.

====================================   ==============================

.. rubric:: Methods

==========================================   ========================================================

Method                                                                                        Summary

==========================================   ========================================================
:ref:`copy_by_formula <copy_by_formula>`         Copy a material from the database (pick by formula).

:ref:`copy_by_name <copy_by_name>`                  Copy a material from the database (pick by name).

:ref:`list_materials <list_materials>`                            List all materials in the database.

:ref:`list_properties <list_properties_2>`         List the properties of a material in the database.

==========================================   ========================================================

.. rubric:: Included in:

============================   ======================

Parent                                        Summary

============================   ======================
:ref:`materials <materials>`       'materials' child.

============================   ======================

